# vertical-garden-controller

./: CHANGELOG.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
docker/: Dockerfile
src/: main.cpp
